:sparkles: feat: can add bar as favorite
